--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -98,59 +98,6 @@ This document has been written to address the needs of a wide audience. It is in
 
 For this document to fulfill all of these requirements specified above is a difficult task, and the content of it is likely unable to capture 100\% of the information necessary to fulfill its goals to perfection. It should be obvious that engineers are by no means omniscient, not even regarding the systems that they design themselves. However, the authors of this document will still attempt to cover the relevant content in a digestible and comprehensive way, and thank the reader for their patience and good will.\\
 
-{\color{red}
-All text in red is written by the professor:\\
-
-Decomposing a system into modules is a commonly accepted approach to developing
-software.  A module is a work assignment for a programmer or programming
-team~\citep{ParnasEtAl1984}.  We advocate a decomposition
-based on the principle of information hiding~\citep{Parnas1972a}.  This
-principle supports design for change, because the ``secrets'' that each module
-hides represent likely future changes.  Design for change is valuable in SC,
-where modifications are frequent, especially during initial development as the
-solution space is explored.
-
-Our design follows the rules layed out by \citet{ParnasEtAl1984}, as follows:
-\begin{itemize}
-  \item System details that are likely to change independently should be the
-        secrets of separate modules.
-  \item Each data structure is implemented in only one module.
-  \item Any other program that requires information stored in a module's data
-        structures must obtain it by calling access programs belonging to that module.
-\end{itemize}
-
-After completing the first stage of the design, the Software Requirements
-Specification (SRS), the Module Guide (MG) is developed~\citep{ParnasEtAl1984}. The MG
-specifies the modular structure of the system and is intended to allow both
-designers and maintainers to easily identify the parts of the software.  The
-potential readers of this document are as follows:
-
-\begin{itemize}
-  \item New project members: This document can be a guide for a new project member
-        to easily understand the overall structure and quickly find the
-        relevant modules they are searching for.
-  \item Maintainers: The hierarchical structure of the module guide improves the
-        maintainers' understanding when they need to make changes to the system. It is
-        important for a maintainer to update the relevant sections of the document
-        after changes have been made.
-  \item Designers: Once the module guide has been written, it can be used to
-        check for consistency, feasibility, and flexibility. Designers can verify the
-        system in various ways, such as consistency among modules, feasibility of the
-        decomposition, and flexibility of the design.
-\end{itemize}
-
-The rest of the document is organized as follows. Section
-\ref{SecChange} lists the anticipated and unlikely changes of the software
-requirements. Section \ref{SecMH} summarizes the module decomposition that
-was constructed according to the likely changes. Section \ref{SecConnection}
-specifies the connections between the software requirements and the
-modules. Section \ref{SecMD} gives a detailed description of the
-modules. Section \ref{SecTM} includes two traceability matrices. One checks
-the completeness of the design against the requirements provided in the SRS. The
-other shows the relation between anticipated changes and the modules. Section
-\ref{SecUse} describes the use relation between modules.
-}
-
 \section{Anticipated and Unlikely Changes} \label{SecChange}
 
 This section lists possible changes to the system. According to the likeliness
@@ -206,7 +153,8 @@ actually be implemented.
   \item [\refstepcounter{mnum} \mthemnum \label{mRTC}:] Real Time Clock  Module
   \item [\refstepcounter{mnum} \mthemnum \label{mMAA}:] Moving Average Algorithm Module
   \item [\refstepcounter{mnum} \mthemnum \label{mGP}:] Graph Plotter  Module
-  \item ...
+  \item [\refstepcounter{mnum} \mthemnum \label{mPS}:] Parameter Selection Module
+  \item [\refstepcounter{mnum} \mthemnum \label{mPD}:] Physical Design Module
 \end{description}
 
 
@@ -275,7 +223,7 @@ to be implemented.
 \begin{description}
   \item[Secrets:] Array to store data
   \item[Services:] This module provides the interface between the hardware and the
-    software for the battery status. The battery levels will be used to determine whether the device should be charging or not. This module will also shut down inactive processes so that battery life can be saved.
+    software for the battery status. The battery levels will be used to determine which systems are active. This module will also shut down inactive processes so that battery life can be saved.
   \item[Implemented By:] Firmware
 \end{description}
 
@@ -299,6 +247,13 @@ to be implemented.
   \item[Secrets:] Static array to store the sensor data
   \item[Services:] This module will store the raw data measured by the sensors. These are then processed on the hardware and copied to Device Manager to be read by the software.
   \item[Implemented By:] Firmware
+\end{description}
+
+\subsubsection{Physical Design (\mref{mPD})}
+\begin{description}
+  \item[Secrets:] Not applicable.
+  \item[Services:] This module lays out the structural design of the device.
+  \item[Implemented By:] CAD
 \end{description}
 
 \subsection{Behaviour-Hiding Module}
@@ -377,6 +332,14 @@ to be implemented.
   \item[Implemented By:] Python
 \end{description}
 
+\subsubsection{Parameter Selection (\mref{mPS})}
+
+\begin{description}
+  \item[Secrets:] The data structures and algorithms to take user input and store parameter selection.
+  \item[Services:] This algorithm allows user to preset the device with their own choice of parameters.
+  \item[Implemented By:] Python
+\end{description}
+
 \section{Traceability Matrix} \label{SecTM}
 
 This section shows two traceability matrices: between the modules and the
@@ -390,17 +353,13 @@ requirements and between the modules and the anticipated changes.
     \toprule
     \textbf{Req.} & \textbf{Modules}                                                                           \\
     \midrule
-    R1            & \mref{mHH}, \mref{mInput}, \mref{mParams}, \mref{mControl}                                 \\
-    R2            & \mref{mInput}, \mref{mParams}                                                              \\
-    R3            & \mref{mVerify}                                                                             \\
-    R4            & \mref{mOutput}, \mref{mControl}                                                            \\
-    R5            & \mref{mOutput}, \mref{mODEs}, \mref{mControl}, \mref{mSeqDS}, \mref{mSolver}, \mref{mPlot} \\
-    R6            & \mref{mOutput}, \mref{mODEs}, \mref{mControl}, \mref{mSeqDS}, \mref{mSolver}, \mref{mPlot} \\
-    R7            & \mref{mOutput}, \mref{mEnergy}, \mref{mControl}, \mref{mSeqDS}, \mref{mPlot}               \\
-    R8            & \mref{mOutput}, \mref{mEnergy}, \mref{mControl}, \mref{mSeqDS}, \mref{mPlot}               \\
-    R9            & \mref{mVerifyOut}                                                                          \\
-    R10           & \mref{mOutput}, \mref{mODEs}, \mref{mControl}                                              \\
-    R11           & \mref{mOutput}, \mref{mODEs}, \mref{mEnergy}, \mref{mControl}                              \\
+    R1            & \mref{mBM}, \mref{mSA}, \mref{mDS_2}, \mref{mRTC}                               \\
+    R2            & \mref{mSA}, \mref{mMAA}                                                              \\
+    R3            & \mref{mSA}, \mref{mDS_2}, \mref{mPG}, \mref{mRTC}, \mref{mMAA}                                                                             \\
+    R4            & \mref{mPD}                                                    \\
+    R5            & \mref{mPS} \\
+    R6            & \mref{mDM}, \mref{mDS_1}, \mref{mSA}, \mref{mPG}\\
+    R7            & \mref{mDM}, \mref{mDS_1}, \mref{mGP}             \\
     \bottomrule
   \end{tabular}
   \caption{Trace Between Requirements and Modules}
@@ -413,18 +372,8 @@ requirements and between the modules and the anticipated changes.
     \toprule
     \textbf{AC}         & \textbf{Modules}  \\
     \midrule
-    \acref{acHardware}  & \mref{mHH}        \\
-    \acref{acInput}     & \mref{mInput}     \\
-    \acref{acParams}    & \mref{mParams}    \\
-    \acref{acVerify}    & \mref{mVerify}    \\
-    \acref{acOutput}    & \mref{mOutput}    \\
-    \acref{acVerifyOut} & \mref{mVerifyOut} \\
-    \acref{acODEs}      & \mref{mODEs}      \\
-    \acref{acEnergy}    & \mref{mEnergy}    \\
-    \acref{acControl}   & \mref{mControl}   \\
-    \acref{acSeqDS}     & \mref{mSeqDS}     \\
-    \acref{acSolver}    & \mref{mSolver}    \\
-    \acref{acPlot}      & \mref{mPlot}      \\
+    \acref{acHardware}  & \mref{mPD}        \\
+    \acref{acInput}     & \mref{mDS_1}     \\
     \bottomrule
   \end{tabular}
   \caption{Trace Between Anticipated Changes and Modules}
@@ -456,15 +405,5 @@ because they use modules from the lower levels.
 \bibliographystyle {plainnat}
 \bibliography{../../../refs/References}
 
-\newpage{}
-\section*{Appendix --- Reflection}
-
-The information in this section will be used to evaluate the team members on the
-graduate attribute of Lifelong Learning.  Please answer the following questions:
-
-\begin{enumerate}
-  \item
-  \item
-\end{enumerate}
 
 \end{document}
