added example of suit

--- a/docs/Design/SystDesign/SystDes.tex
+++ b/docs/Design/SystDesign/SystDes.tex
@@ -464,7 +464,7 @@ During the initial phases of the design process, we encouraged each other to thr
 		\item If designed poorly, can potentially look like a prison ankle monitor.
 		\item Difficult for a user to read any data displayed on a screen on the anklet.
 	\end{itemize}
-\item Waist-Mounted Activity Tracker
+\item Waist-Mounted Activity Tracker\\
 	Pros:
 	\begin{itemize}
 		\item Being close to the core of the user, the maximum weight weight of the device can be greatly increased.
@@ -475,7 +475,7 @@ During the initial phases of the design process, we encouraged each other to thr
 		\item Located in a hard-to-hide location, and may get in the way of reaching below the waist.
 		\item Incompatible with certain clothing.
 	\end{itemize}
-\item Bracelet Activity Tracker
+\item Bracelet Activity Tracker\\
 	Pros:
 	\begin{itemize}
 		\item Extremely discreet.
@@ -487,7 +487,7 @@ During the initial phases of the design process, we encouraged each other to thr
 		\item Interacting with a small-surface area bracelet may be difficult for those with movement issues.
 		\item Small size reduces battery capacity options.
 	\end{itemize}
-\item Full Body Suit Tracker
+\item Full Body Suit Tracker\\
 	Pros:
 	\begin{itemize}
 		\item Highest fidelity data possible, collecting data from every point on the body.
@@ -499,11 +499,11 @@ During the initial phases of the design process, we encouraged each other to thr
 		\item Easy to damage.
 		\item Many people would be uncomfortable wearing a full sized-body suit during all their daily activities.
 	\end{itemize}
-\item Mobile App 
+\item Mobile App \\
 	Pros:
 	\begin{itemize}
 		\item Inexpensive.
-		\item Soft; meaning we can modify it according to new requirements whenever necessary.
+		\item Flexible; meaning we can modify it according to new requirements whenever necessary.
 		\item Many are already extremely familiar with activity tracking apps; onboarding process will not be difficult.
 		\item Can be linked to off-the-shelf smartwatches with fantastic activity collecting technology.
 	\end{itemize}
@@ -516,9 +516,16 @@ Why did we pursue the smart-watch solution? For two very important reasons; end-
 
 The other solutions that we could have proceeded with may have met all the functional requirements and many of the nonfunctional requirements that we specified, but many of them are unfamiliar and possibly confusing to the end user. For example, having to wear a box around one's waist is likely a novel and strange experience to any user, and could make them uncomfortable with using the device in general. In addition, most people have worn a watch before, and are very familiar with their operations. This makes the process of learning how to use the watch simpler and more intuitive.\\
 
-A smart-watch was also deemed the most acceptable solution to an end user. It would be difficult to convince anyone to wear a sensor covered spandex suit everywhere they went in their daily life, for a period of up to 14 days. A watch is familiar, socially acceptable, and much less embarrassing than wearing a full bodied suit.
+A smart-watch was also deemed the most acceptable solution to an end user. It would be difficult to convince anyone to wear a sensor covered spandex suit everywhere they went in their daily life, for a period of up to 14 days. A watch is familiar, socially acceptable, and much less embarrassing than wearing a full bodied suit similar to the figure below.
 
 \end{enumerate}
 
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=1\textwidth]{Pink}
+		\caption{Example of Someone Experiencing a Full Body Suit}
+		\label{Pink} 
+	\end{center}
+\end{figure}
 
 \end{document}
