added link to SRS

--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -353,13 +353,13 @@ requirements and between the modules and the anticipated changes.
     \toprule
     \textbf{Req.} & \textbf{Modules}                                                                           \\
     \midrule
-    R1            & \mref{mBM}, \mref{mSA}, \mref{mDS_2}, \mref{mRTC}                               \\
-    R2            & \mref{mSA}, \mref{mMAA}                                                              \\
-    R3            & \mref{mSA}, \mref{mDS_2}, \mref{mPG}, \mref{mRTC}, \mref{mMAA}                                                                             \\
-    R4            & \mref{mPD}                                                    \\
-    R5            & \mref{mPS} \\
-    R6            & \mref{mDM}, \mref{mDS_1}, \mref{mSA}, \mref{mPG}\\
-    R7            & \mref{mDM}, \mref{mDS_1}, \mref{mGP}             \\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{1}            & \mref{mBM}, \mref{mSA}, \mref{mDS_2}, \mref{mRTC}                               \\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{2}            & \mref{mSA}, \mref{mMAA}                                                              \\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{3}            & \mref{mSA}, \mref{mDS_2}, \mref{mPG}, \mref{mRTC}, \mref{mMAA}                                                                             \\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{4}            & \mref{mPD}                                                    \\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{5}            & \mref{mPS} \\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{6}            & \mref{mDM}, \mref{mDS_1}, \mref{mSA}, \mref{mPG}\\
+    R\href{https://github.com/zakerl/Capstone_Project/blob/main/docs/SRS/SRS.pdf}{7}           & \mref{mDM}, \mref{mDS_1}, \mref{mGP}             \\
     \bottomrule
   \end{tabular}
   \caption{Trace Between Requirements and Modules}
