Added href to easy eda

--- a/docs/Design/SystDesign/SystDes.tex
+++ b/docs/Design/SystDesign/SystDes.tex
@@ -305,7 +305,7 @@ Refer to Appendix \ref{MechHardware} for individual CAD designs.\\
 
 The following list of items will be custom designed and fabricated:
 \begin{itemize}
-\item{Custom PCB designed using Easy EDA and fabricated using JLCPCB.}
+\item{Custom PCB designed using \href{https://easyeda.com/}{Easy EDA} and fabricated using \href{https://jlcpcb.com/}{JLCPCB}}
 \item{3D printed casing for TFT Display/activity tracker.}
 \item{Touch sensor (bezel) to navigate activity tracker.}
 \end{itemize}
