--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -697,6 +697,78 @@ The following table is taken directly from the Module Guide document for this pr
 
 %%%% HARDWARE Interface Modules %%%%%
 
+
+%Battery Management Module 
+
+\section{MIS of Graph Plotter Module} \label{mBMM} 
+
+\subsection{Module}
+
+\wss{Short name for the module}
+
+\subsection{Uses}
+
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+
+\subsubsection{Exported Access Programs}
+
+\begin{center}
+\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+\wss{accessProg} & - & - & - \\
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+
+\wss{Not all modules will have state variables.  State variables give the module
+  a memory.}
+
+\subsubsection{Environment Variables}
+
+\wss{This section is not necessary for all modules.  Its purpose is to capture
+  when the module has external interaction with the environment, such as for a
+  device driver, screen interface, keyboard, file, etc.}
+
+\subsubsection{Assumptions}
+
+\wss{Try to minimize assumptions and anticipate programmer errors via
+  exceptions, but for practical purposes assumptions are sometimes appropriate.}
+
+\subsubsection{Access Routine Semantics}
+
+\noindent \wss{accessProg}():
+\begin{itemize}
+\item transition: \wss{if appropriate} 
+\item output: \wss{if appropriate} 
+\item exception: \wss{if appropriate} 
+\end{itemize}
+
+\wss{A module without environment variables or state variables is unlikely to
+  have a state transition.  In this case a state transition can only occur if
+  the module is changing the state of another module.}
+
+\wss{Modules rarely have both a transition and an output.  In most cases you
+  will have one or the other.}
+
+\subsubsection{Local Functions}
+
+\wss{As appropriate} \wss{These functions are for the purpose of specification.
+  They are not necessarily something that is going to be implemented
+  explicitly.  Even if they are implemented, they are not exported; they only
+  have local scope.}
+
+\newpage
+
+
 % Device Manager Module
 
 \section{MIS of Device Manager Module} \label{mDM} 
@@ -1195,9 +1267,9 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 
 
-%Graph Plotter Module
+%Parameter Selection
 
-\section{MIS of Graph Plotter Module} \label{mGP} 
+\section{MIS of Parameter Selection} \label{mPS} 
 
 \subsection{Module}
 
@@ -1264,6 +1336,10 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
   have local scope.}
 
 \newpage
+
+
+
+
 
 
 \bibliographystyle {plainnat}
