--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -686,21 +686,80 @@ The following table is taken directly from the Module Guide document for this pr
 
 %%%% HARDWARE Interface Modules %%%%%
 
+%Physical Design Module 
 
-%Battery Management Module 
-
-\section{MIS of Graph Plotter Module} \label{mBMM} 
+\section{MIS of Physical Design Module} \label{mPD} 
 
 \subsection{Module}
 
-\wss{Short name for the module}
+Physical\_Design
 
 \subsection{Uses}
-
+None.
 
 \subsection{Syntax}
 
 \subsubsection{Exported Constants}
+
+None.
+
+\subsubsection{Exported Access Programs}
+
+None.
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+
+None.
+
+\subsubsection{Environment Variables}
+
+None.
+
+\subsubsection{Assumptions}
+
+Will not impact the the functionality of any other components.
+
+\subsubsection{Access Routine Semantics}
+
+None.
+
+\subsubsection{Local Functions}
+
+None.
+
+\newpage
+
+%Battery Management Module 
+
+\section{MIS of Battery Management Module} \label{mBM} 
+
+\subsection{Module}
+
+Bat\_Man
+
+\subsection{Uses}
+
+None.
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+
+\begin{center}
+\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+Disp\_Flag& - & bool & - \\
+MPU\_Flag& - & bool & - \\
+RTC\_Flag& - & bool & - \\
+HR\_Flag& - & bool & - \\
+Touch\_Flag& - & bool & - \\
+\hline
+\end{tabular}
+\end{center}
 
 \subsubsection{Exported Access Programs}
 
@@ -709,7 +768,7 @@ The following table is taken directly from the Module Guide document for this pr
 \hline
 \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
 \hline
-\wss{accessProg} & - & - & - \\
+Bat\_State & Bat\_Select & $\mathbb{Z}$ (tuple) & BED\_ERR\_BAT\\
 \hline
 \end{tabular}
 \end{center}
@@ -718,42 +777,23 @@ The following table is taken directly from the Module Guide document for this pr
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
+None.
 
 \subsubsection{Environment Variables}
 
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
+None.
 
 \subsubsection{Assumptions}
 
-\wss{Try to minimize assumptions and anticipate programmer errors via
-  exceptions, but for practical purposes assumptions are sometimes appropriate.}
+System responds instantaneously to changes in flags (exported constants).
 
 \subsubsection{Access Routine Semantics}
 
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \subsubsection{Local Functions}
 
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
+None.
 
 \newpage
 
@@ -764,13 +804,16 @@ The following table is taken directly from the Module Guide document for this pr
 
 \subsection{Module}
 
-Device Manager 
+Dev\_Man
 
 \subsection{Uses}
 
-Data Storage Module (Section \ref{}), Sensor Array Module (Section \ref{}), Display System Module (Section \ref{}), Prompt Generation Module (Section \ref{}), Real Time Clock Module (Section \ref{}), Moving Average Algorithm Module (Section \ref{}), Graph Plotter Module (Section \ref{})
-
+Data Storage Module (Section \ref{mDS_1})
 \subsection{Syntax}
+
+\subsubsection{Exported Constants}
+
+None.
 
 \subsubsection{Exported Access Programs}
 
@@ -779,7 +822,8 @@ Data Storage Module (Section \ref{}), Sensor Array Module (Section \ref{}), Disp
 \hline
 \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
 \hline
-device manager & - & - & - \\
+SD\_Data & - & Card\_IO: string & BED\_ERR\_SD: $\mathbb{Z}$ \\
+Host\_Data & Host\_IO: string & Extract\_Data: string & BED\_ERR\_SD: $\mathbb{Z}$ \\
 \hline
 \end{tabular}
 \end{center}
@@ -788,34 +832,23 @@ device manager & - & - & - \\
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
-
-No state variables, since the module will only work in the sense that it is calling upon other modules. 
+None.
 
 \subsubsection{Environment Variables}
 
-No external interaction with environment
+Extract\_Data: string which outputs to supporting software on researcher's computers.
 
 \subsubsection{Assumptions}
 
-No assumptions
+\begin{itemize}
+\item SD card is formatted correctly.
+\item SD card is inserted correctly.
+\item Valid connection to host computer is present.
+\end{itemize}
 
 \subsubsection{Access Routine Semantics}
 
-\noindent bed\_devicemanager():
-\begin{itemize}
-\item transition:   
-\item output: when powered on, the device manager will call on the display system module to output the date and time. It will also be responsible for modifying the state of the prompt generation module when an activity is sensed to prompt the user. %After the user completes a prompt (i.e. in the prompt generation module), the state of the data storage module will change to store their data. 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \newpage
 
@@ -827,15 +860,17 @@ No assumptions
 
 \subsection{Module}
 
-Data Storage
+Data\_Stor
 
 \subsection{Uses}
 
-SD Card Module? SD Card Driver? Software Module for Collecting Data?   %%%%%%%%%%%%
+Sensor Array Module (Section \ref{mSA}), Real Time Clock Module (Section \ref{mRTC})    %%%%%%%%%%%%
 
 \subsection{Syntax}
 
 \subsubsection{Exported Constants}
+
+None.
 
 \subsubsection{Exported Access Programs}
 
@@ -844,7 +879,8 @@ SD Card Module? SD Card Driver? Software Module for Collecting Data?   %%%%%%%%%
 \hline
 \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
 \hline
-\wss{accessProg} & - & - & - \\
+Card\_Read & - & Read\_Data: string & BED\_ERR\_SD: $\mathbb{Z}$ \\
+Card\_Write & Write\_Data: $\mathbb{Z}$ (tuple) & Write\_Flag: bool & BED\_ERR\_SD: $\mathbb{Z}$ \\
 \hline
 \end{tabular}
 \end{center}
@@ -853,47 +889,24 @@ SD Card Module? SD Card Driver? Software Module for Collecting Data?   %%%%%%%%%
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.} 
-
-THIS one should definetly have memory.  %%%%%%%%%%%
+None.
 
 \subsubsection{Environment Variables}
 
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
-
-This module has interaction with the onboard SD card. %%%%%%%%
+file: A text file.
 
 \subsubsection{Assumptions}
-
-Data is able to write to the SD card without corruption and in the right order. Check the data before it is written to see if the format matches, otherwise dump it. (or something) %%%%%%%%%
-
+\begin{itemize}
+\item SD card is formatted correctly.
+\item SD card is inserted correctly.
+\end{itemize}
 \subsubsection{Access Routine Semantics}
 
-
-
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \subsubsection{Local Functions}
 
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
+None.
 
 \newpage
 
@@ -904,52 +917,43 @@ Data is able to write to the SD card without corruption and in the right order. 
 
 \subsection{Module}
 
-Sensor Array
+Sensor\_Array
 
 \subsection{Uses}
 
-Moving Average Algorithm Module (Section \ref{}) %uses this module becuase the heartrate uses this module. 
+Data Storage Module (Section \ref{mDS_1}), Moving Average Algorithm Module (Section \ref{mMAA}) %uses this module becuase the heartrate uses this module. 
 
 \subsection{Syntax}
 
-\begin{center}
-\begin{tabular}{p{4cm} p{2cm} p{2cm} p{4cm}}
-\hline
-\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
-\hline
-accelerometer\_data & tuple & - & badMPUReadings, badInitAcceleration \\ %include some made up bed_errors.
-heartrate\_data & $\mathbb{R}$ & - & badHRReadings, badInitHR, badSmoothingHR \\
-pedometer\_count & - & $\mathbb{R}$ & \\
-heartrate & - & $\mathbb{R}$ & \\
-prompt\_interrupt & - & bool & \\ %this will send a signal to the prompt generation module in order to tell it that an activity has been sensed. Then that module will take control (this should probably be an access routine).
+\subsubsection{Exported Constants}
 
-\hline
-\end{tabular}
-\end{center}
+
+\subsubsection{Exported Access Programs}
+
+None.
 
 \subsection{Semantics}
 
 \subsubsection{State Variables}
 %give the module memory.
 
-prompt\_interrupt: bool \\
-Accel\_power: bool \\
-HR\_sensor\_power: bool \\ %%is the accelerometer and HR sensor powered.
-HR\_smoothed: $\mathbb{R}$ \\
-Step\_smoothed: $\mathbb{R}$ \\
+$pedometer\_count: \mathbb{R}$ \\
+$heartrate: \mathbb{R}$ \\
+$prompt\_interrupt:$ bool \\
+$touch\_input:$ bool (tuple) \\
 
 
 \subsubsection{Environment Variables}
 %interaction with device driver, screen, keyboard, file
 
-is\_stored: bool \\
-is\_displayed: bool \\
-
+None.
 
 \subsubsection{Assumptions}
+\begin{itemize}
 
-All activity thresholds are provided from the configuration file. \\
-There is available space on the SD card. \\
+\item All activity thresholds are provided from the configuration file. \\
+\item There is available space on the SD card. \\
+\end{itemize}
 
 \subsubsection{Access Routine Semantics}
 
@@ -972,23 +976,28 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsection{Module}
 
-\wss{Short name for the module}
+Disp\_Sys
 
 \subsection{Uses}
 
+Prompt Generation Module (Section \ref{mPG}), Real Time Clock Module (Section \ref{mRTC})
 
 \subsection{Syntax}
 
 \subsubsection{Exported Constants}
 
+None.
+
 \subsubsection{Exported Access Programs}
 
 \begin{center}
-\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\begin{tabular}{p{3cm} p{3cm} p{4cm} p{2cm}}
 \hline
 \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
 \hline
-\wss{accessProg} & - & - & - \\
+Disp\_Time & - & - & BED\_ERR\_DISP: $\mathbb{Z}$ \\
+Disp\_Prompt & Prompt: string & Response: string & BED\_ERR\_DISP: $\mathbb{Z}$ \\
+Switch\_Window & Window:  $\mathbb{Z}$ & - &  BED\_ERR\_DISP: $\mathbb{Z}$ \\
 \hline
 \end{tabular}
 \end{center}
@@ -997,42 +1006,23 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
+None.
 
 \subsubsection{Environment Variables}
 
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
+None.
 
 \subsubsection{Assumptions}
 
-\wss{Try to minimize assumptions and anticipate programmer errors via
-  exceptions, but for practical purposes assumptions are sometimes appropriate.}
+None.
 
 \subsubsection{Access Routine Semantics}
 
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \subsubsection{Local Functions}
 
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
+None.
 
 \newpage
 
@@ -1044,23 +1034,26 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsection{Module}
 
-\wss{Short name for the module}
+Prompt\_Gen
 
 \subsection{Uses}
 
+Sensor Array Module (Section \ref{mSA})
 
 \subsection{Syntax}
 
 \subsubsection{Exported Constants}
 
+$max\_prompts: \mathbb{Z}$
+
 \subsubsection{Exported Access Programs}
 
 \begin{center}
-\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\begin{tabular}{p{3cm} p{3cm} p{4cm} p{2cm}}
 \hline
 \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
 \hline
-\wss{accessProg} & - & - & - \\
+Access\_Prompt & Prompt\_: $\mathbb{Z}$ & Prompt: Struct & BED\_ERR\_PG: $\mathbb{Z}$ \\
 \hline
 \end{tabular}
 \end{center}
@@ -1069,42 +1062,23 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
+None.
 
 \subsubsection{Environment Variables}
 
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
+None.
 
 \subsubsection{Assumptions}
 
-\wss{Try to minimize assumptions and anticipate programmer errors via
-  exceptions, but for practical purposes assumptions are sometimes appropriate.}
+None.
 
 \subsubsection{Access Routine Semantics}
 
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \subsubsection{Local Functions}
 
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
+None.
 
 \newpage
 
@@ -1116,23 +1090,26 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsection{Module}
 
-\wss{Short name for the module}
+RTC
 
 \subsection{Uses}
 
+None.
 
 \subsection{Syntax}
 
 \subsubsection{Exported Constants}
 
+None.
+
 \subsubsection{Exported Access Programs}
 
 \begin{center}
-\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\begin{tabular}{p{3cm} p{3cm} p{4cm} p{2cm}}
 \hline
 \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
 \hline
-\wss{accessProg} & - & - & - \\
+Get\_DateTime & - & $ \mathbb{R}$ & BED\_ERR\_RTC: $ \mathbb{Z}$ \\
 \hline
 \end{tabular}
 \end{center}
@@ -1141,119 +1118,27 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
+\textit{Date}: string\\
+\textit{Time}: string\\
 
 \subsubsection{Environment Variables}
 
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
+None.
 
 \subsubsection{Assumptions}
 
-\wss{Try to minimize assumptions and anticipate programmer errors via
-  exceptions, but for practical purposes assumptions are sometimes appropriate.}
+\begin{itemize}
+\item Initial Date and Time is correctly set.
+\end{itemize}
 
 \subsubsection{Access Routine Semantics}
 
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \subsubsection{Local Functions}
 
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
-
+None.
 \newpage
-
-
-
-
-%Moving Average Algorithm Module
-
-\section{MIS of Moving Average Algorithm Module} \label{mMAA} 
-
-\subsection{Module}
-
-\wss{Short name for the module}
-
-\subsection{Uses}
-
-
-\subsection{Syntax}
-
-\subsubsection{Exported Constants}
-
-\subsubsection{Exported Access Programs}
-
-\begin{center}
-\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
-\hline
-\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
-\hline
-\wss{accessProg} & - & - & - \\
-\hline
-\end{tabular}
-\end{center}
-
-\subsection{Semantics}
-
-\subsubsection{State Variables}
-
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
-
-\subsubsection{Environment Variables}
-
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
-
-\subsubsection{Assumptions}
-
-\wss{Try to minimize assumptions and anticipate programmer errors via
-  exceptions, but for practical purposes assumptions are sometimes appropriate.}
-
-\subsubsection{Access Routine Semantics}
-
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
-
-\subsubsection{Local Functions}
-
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
-
-\newpage
-
-
 
 
 %Parameter Selection
@@ -1262,67 +1147,45 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \subsection{Module}
 
-\wss{Short name for the module}
+Param\_Select
 
 \subsection{Uses}
 
+Device Manager Module (Section \ref{mDM})
 
 \subsection{Syntax}
 
 \subsubsection{Exported Constants}
 
+None.
+
 \subsubsection{Exported Access Programs}
 
-\begin{center}
-\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
-\hline
-\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
-\hline
-\wss{accessProg} & - & - & - \\
-\hline
-\end{tabular}
-\end{center}
+None.
 
 \subsection{Semantics}
 
 \subsubsection{State Variables}
 
-\wss{Not all modules will have state variables.  State variables give the module
-  a memory.}
+$param\_input$: string
 
 \subsubsection{Environment Variables}
 
-\wss{This section is not necessary for all modules.  Its purpose is to capture
-  when the module has external interaction with the environment, such as for a
-  device driver, screen interface, keyboard, file, etc.}
+file: a text file on the SD card.
 
 \subsubsection{Assumptions}
 
-\wss{Try to minimize assumptions and anticipate programmer errors via
-  exceptions, but for practical purposes assumptions are sometimes appropriate.}
+\begin{itemize}
+\item All configuration parameters within acceptable limits.
+\end{itemize}
 
 \subsubsection{Access Routine Semantics}
 
-\noindent \wss{accessProg}():
-\begin{itemize}
-\item transition: \wss{if appropriate} 
-\item output: \wss{if appropriate} 
-\item exception: \wss{if appropriate} 
-\end{itemize}
-
-\wss{A module without environment variables or state variables is unlikely to
-  have a state transition.  In this case a state transition can only occur if
-  the module is changing the state of another module.}
-
-\wss{Modules rarely have both a transition and an output.  In most cases you
-  will have one or the other.}
+None.
 
 \subsubsection{Local Functions}
 
-\wss{As appropriate} \wss{These functions are for the purpose of specification.
-  They are not necessarily something that is going to be implemented
-  explicitly.  Even if they are implemented, they are not exported; they only
-  have local scope.}
+None.
 
 \newpage
 
@@ -1333,11 +1196,5 @@ data\_smoothing\_filter(): the purpose of this function is to make sure that the
 
 \bibliographystyle {plainnat}
 \bibliography {../../../refs/References}
-
-\newpage
-
-\section{Appendix} \label{Appendix}
-
-\wss{Extra information if required}
 
 \end{document}
