--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -382,7 +382,7 @@ because they use modules from the lower levels.
 
 \begin{figure}[H]
   \centering
-  %\includegraphics[width=0.7\textwidth]{UsesHierarchy.png}
+\includegraphics[width=\textwidth]{DAG.png}
   \caption{Use hierarchy among modules}
   \label{FigUH}
 \end{figure}
